compiler/toc-hir-lowering/tests/snapshots/lowering__lower_int_literal-2.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "const a := 99999999999999999999"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..31): "<root>"@(dummy)
      StmtBody@(src/main.t:0..31): []
        StmtItem@(src/main.t:0..31): ItemId(0)
          ConstVar@(src/main.t:0..31): const "a"@(src/main.t:6..7)
            ExprBody@(src/main.t:11..31)
              Literal@(src/main.t:11..31): Integer(0)
error at src/main.t:11..31: invalid int literal
| error for src/main.t:11..31: number is too large
