compiler/toc-hir-lowering/tests/snapshots/lowering__lower_int_literal.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "const a := 01234560"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..19): "<root>"@(dummy)
      StmtBody@(src/main.t:0..19): []
        StmtItem@(src/main.t:0..19): ItemId(0)
          ConstVar@(src/main.t:0..19): const "a"@(src/main.t:6..7)
            ExprBody@(src/main.t:11..19)
              Literal@(src/main.t:11..19): Integer(1234560)
