compiler/toc-hir-lowering/tests/snapshots/lowering__lower_int_radix_literal-5.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "var _ : int _ := 37#asda"
---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..24): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..24): []
        StmtItem@(FileId(1), 0..11): ItemId(0)
          ConstVar@(FileId(1), 0..11): var "_"@(FileId(1), 4..5)
            Primitive@(FileId(1), 8..11): Int
        Assign@(FileId(1), 12..24)
          Name@(FileId(1), 12..13): "_"@(FileId(1), 4..5)
          Literal@(FileId(1), 17..24): Integer(0)
error at (FileId(1), 17..24): invalid int literal
| error for (FileId(1), 17..19): base is not between 2 - 36

