compiler/toc-hir-lowering/tests/snapshots/lowering__lower_int_radix_literal-6.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "var _ : int _ := 0#0000"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..23): "<root>"@(dummy)
      StmtBody@(src/main.t:0..23): []
        StmtItem@(src/main.t:0..11): ItemId(0)
          ConstVar@(src/main.t:0..11): var "_"@(src/main.t:4..5)
            Primitive@(src/main.t:8..11): Int
        Assign@(src/main.t:12..23)
          Name@(src/main.t:12..13): "_"@(src/main.t:4..5)
          Literal@(src/main.t:17..23): Integer(0)
error at src/main.t:17..23: invalid int literal
| error for src/main.t:17..18: base is not between 2 - 36
